minor changes to regions api doc
