# storage/api-docs/api-docs.json
@@ -355,6 +355,84 @@
                         "description": "API endpoint not found"
                     }
                 }
+            },
+            "post": {
+                "tags": [
+                    "Manage Regions"
+                ],
+                "summary": "Create region using region_name and region_code.",
+                "operationId": "store-region",
+                "parameters": [
+                    {
+                        "name": "country-id",
+                        "in": "path",
+                        "description": "ID of the country.",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    },
+                    {
+                        "name": "region_name",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "region_code",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    },
+                    "422": {
+                        "description": "Unprocessable Content"
+                    },
+                    "404": {
+                        "description": "API endpoint not found"
+                    }
+                }
+            }
+        },
+        "/api/v1/regions/{region-id}": {
+            "get": {
+                "tags": [
+                    "Manage Regions"
+                ],
+                "summary": "Show a given region.",
+                "operationId": "show-region",
+                "parameters": [
+                    {
+                        "name": "region-id",
+                        "in": "path",
+                        "description": "ID of the region.",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    },
+                    "422": {
+                        "description": "Unprocessable Content"
+                    },
+                    "404": {
+                        "description": "API endpoint not found"
+                    }
+                }
             }
         }
     },
